# QuarkCpp

./: .clang-format  .gitignore  001-Actor-Execution-Model.md  002-Scheduler.md  003-Memory.md  004-Resources.md  005-Developer-Model.md  006-Messaging-and-Addressing.md  007-Failure-and-Supervision.md  008-Metadata-and-Startup.md  009-Observability.md  010-Distribution.md  011-Timers-and-Scheduled-Work.md  012-Persistence.md  013-Configuration.md  014-Testing-Model.md  015-Reentrancy-and-Quiescence.md  016-Serialization.md  017-Delivery-Guarantees.md  018-Clocks-and-Deadlines.md  019-Platform-Abstraction-Layer.md  020-Security.md  021-Cluster-Formation-and-Lifecycle.md  022-Resource-Governance-and-Overload-Control.md  023-Performance-Targets-and-Budgets.md  024-Streaming-and-Inbound-Streams.md  025-Placement-Policies-and-Stateless-Workers.md  026-Large-Scale-Cluster-Topology.md  027-Reminders.md  ActorEngineSpecification.md  CMakeLists.txt  CONVENTIONS.md  OpenQuestions.md  PERFORMANCE.md  PersistenceAdapters.md  README.md  VERIFICATION.md
.claude/agents/: quark-architect.md  quark-judge.md  quark-prover.md  quark-redteam.md
.claude/workflows/: README.md  design-debate-prove.js
.github/workflows/: ci.yml
bench/: CMakeLists.txt  README.md  activation_bench.cpp  ask_bench.cpp  bench_harness.hpp  ci_bench_gate.sh  mailbox_bench.cpp  placement_bench.cpp  reminder_bench.cpp  sched_bench.cpp  serialize_bench.cpp  stream_bench.cpp  supervision_bench.cpp
cmake/: QuarkPersistenceAdapters.cmake  QuarkWarnings.cmake
decisions/: ADR-001-mailbox-mpsc-hot-path.md  ADR-002-mailbox-mpsc-hot-path-r2.md  ADR-003-mailbox-mpsc-hot-path-r3.md  ADR-004-mailbox-mpsc-hot-path-r4.md  ADR-005-inbound-stream-ingestion-hot-path.md  ADR-006-large-scale-cluster-topology.md  ADR-007-actor-authoring-and-handler-dispatch-api.md  ADR-008-engine-actor-configuration-and-activation-lifecycle-policy.md  ADR-009-failure-supervision-and-recovery-policy-model.md  ADR-010-priority-and-fairness-scheduling-policy.md  ADR-011-cluster-relay-and-placement-gate-verification.md  ADR-012-weighted-hrw-distribution-regate.md  ADR-013-weighted-hrw-distribution-regate-2.md  ADR-014-streaming-async-suspend-real-scheduler-gate.md  ADR-015-actor-execution-vehicle-passive-stackless-vs-fibers.md  ADR-016-serialization-wire-fast-path-encode-gate.md  ADR-017-durable-reminder-mass-due-scale-gate.md  ADR-018-outbound-streaming-replies.md  ADR-019-best-effort-broadcast-publish-primitive.md  ADR-028-lazy-activation-idle-timeout-eviction.md
include/quark/: version.hpp
include/quark/adapters/: rocksdb_reminder_store.hpp  rocksdb_store.hpp  sqlite_reminder_store.hpp  sqlite_store.hpp
include/quark/core/: activation.hpp  actor.hpp  actor_ref.hpp  aead.hpp  at_rest.hpp  audit.hpp  authorizer.hpp  capabilities.hpp  cluster.hpp  cluster_topology.hpp  config.hpp  dead_letter.hpp  deadline.hpp  deadline_propagation.hpp  delivery.hpp  describe.hpp  descriptor.hpp  dispatch.hpp  distribution.hpp  engine.hpp  engine_config.hpp  error.hpp  event_log.hpp  exec_state.hpp  file_store.hpp  governance.hpp  hot_cell.hpp  ids.hpp  mailbox.hpp  membership.hpp  message_context.hpp  metadata.hpp  metrics.hpp  node_authority.hpp  observability.hpp  persistence.hpp  placement.hpp  placement_policies.hpp  policies.hpp  principal.hpp  (+24 more)
include/quark/detail/: hash.hpp  message_pool.hpp  reply_cell.hpp
pal/: csprng.hpp  file_io.hpp  net.hpp  pal.hpp
pal/linux_x86_64/: clock.hpp  file_io.hpp  net.hpp
pal/windows_x86_64/: clock.hpp  file_io.hpp  net.hpp
samples/: CMakeLists.txt  README.md
samples/01_hello_counter/: main.cpp
samples/02_supervised_worker/: main.cpp
samples/03_pipeline/: main.cpp
samples/04_scheduled_timer/: main.cpp
samples/05_cooperative_cancellation/: main.cpp
samples/06_streaming_backpressure/: main.cpp
samples/07_persistence/: main.cpp
samples/08_cluster_two_nodes/: main.cpp
samples/09_placement/: main.cpp
samples/10_replacement/: main.cpp
samples/11_stateless_workers/: main.cpp
samples/12_capability_actor/: main.cpp
samples/13_cache_affinity/: main.cpp
samples/14_durable_reminders/: main.cpp
samples/15_tcp_cluster/: main.cpp
samples/16_tcp_request_reply/: main.cpp
samples/17_tcp_cluster_mesh/: main.cpp
samples/18_tcp_cluster_multiprocess/: main.cpp  run_cluster.sh
samples/19_tcp_cluster_dynamic_join/: main.cpp  run_cluster_dynamic.sh
samples/20_swim_membership_stability/: main.cpp
samples/21_teardown_skew_repro/: main.cpp  run_repro.sh
samples/22_tcp_secure_transport/: main.cpp
src/: version.cpp
tests/: CMakeLists.txt  activation_deactivate_close_out_dekker_test.cpp  activation_deactivate_flag_test.cpp  activation_dormant_reactivate_test.cpp  activation_restart_resource_rewire_test.cpp  actor_ref_identity_test.cpp  ask_concurrent_test.cpp  ask_engine_test.cpp  ask_reply_before_teardown_test.cpp  ask_reply_cell_test.cpp  authoring_e2e_test.cpp  cluster_dial_dedup_test.cpp  cluster_identity_epoch_test.cpp  cluster_stabilization_window_test.cpp  cluster_swim_failure_detection_test.cpp  cluster_swim_incarnation_test.cpp  cluster_swim_indirect_ping_test.cpp  config_hotcell_read_asm_test.cpp  config_hotcell_torn_test.cpp  config_reconfigure_test.cpp  dead_letter_test.cpp  deadline_accounting_test.cpp  deadline_suspend_clock_test.cpp  deadline_test.cpp  delivery_effectively_once_test.cpp  delivery_partition_fencing_test.cpp  delivery_policy_traits_test.cpp  distribution_placement_test.cpp  distribution_replacement_test.cpp  distribution_routing_test.cpp  engine_broker_fault_safety_test.cpp  engine_declare_lazy_test.cpp  engine_idle_timeout_eviction_test.cpp  engine_lazy_activation_concurrency_test.cpp  engine_lazy_activation_test.cpp  engine_lazy_persistence_test.cpp  exec_cancel_budget_test.cpp  exec_dispatch_test.cpp  exec_single_executor_test.cpp  exec_state_dormant_transitions_test.cpp  (+123 more)
tests/adapters/: reminder_store_conformance.hpp  rocksdb_reminder_store_check.cpp  rocksdb_store_check.cpp  sqlite_reminder_store_check.cpp  sqlite_store_check.cpp  store_conformance.hpp
(+2 files in other folders)
